prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-server
  namespace: kube-ops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus.amoylabs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-server
          servicePort: 9090
